--- a/index/review.html
+++ b/index/review.html
@@ -77,51 +77,43 @@
     <main class="page-content">
         <div class="form-box">
             <h1 style="margin-bottom: 50px">Feedback Form</h1>
-            <form action="https://api.formbucket.com/f/c2K3QTQ" method="post">
-                <div class="form-group">
-                    <label for="name">Name</label>
-                    <input class="form-control" id="name" type="text" name="Name">
+            <form action="mailto: aiymbubu.kulbaeva@iaau.edu.kg" method="post" enctype="text/plain" class="forms-conn">
+                <div class="form-group" >
+                    <label for="name"  class="name-form-at"  >Name</label>
+                    <input type="text" class="form-control" id="name"  name="Name" placeholder="Name">
                 </div>
-                <div class="form-group">
-                    <label for="email">Email</label>
-                    <input class="form-control" id="email" type="email" name="Email">
-                    <small id="emailHelp" class="form-text text-muted">We will never share your e-mail with someone else.</small>
+                <div class="form-group " >
+                    <label for="exampleInputEmail1" >Email</label>
+                    <input type="email" class="form-control" name="Email" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email">
+                    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
                 </div>
-                <div class="form-group">
-                    <label for="message">Message</label>
-                    <textarea class="form-control" id="message" name="Message"></textarea>
+                <div class="form-group "  >
+                    <label for="name">Feedback</label>
+                    <input type="text" class="form-control" id="message" name="Feedback"  placeholder="Enter your feedback">
                 </div>
-                <div class="cont">
-                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
-                        Submit
-                    </button>
-                    <div class="modal" id="myModal">
-                        <div class="modal-dialog">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h4 class="modal-title">Modal</h4>
-                                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                </div>
-                                <div class="modal-body">
-                                    Thank you for your feedback
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
-                                </div>
+                <button   class="my-btn grow" data-toggle="modal" data-target="#exampleModalLong" style="margin-left: 150px">Send</button>
+                <div class="modal fade marg-mod" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="exampleModalLongTitle">Form is Sending ...</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
                             </div>
                         </div>
                     </div>
                 </div>
             </form>
         </div>
-        <footer>
-            <div class="icons">
-                <div class="ro twitter"><a href="https://twitter.com/" class = "ad"><i class="fa fa-twitter-square"></i></a></div>
-                <div class="ro camera"><a href="https://www.instagram.com/"><i class="fa fa-instagram"></i></a></div>
-                <div class="ro github"><a href="https://github.com/akulbaeva/cs-203"><i class="fa fa-github"></i></a></div>
-            </div>
-        </footer>
     </main>
+    <footer>
+        <div class="icons">
+            <div class="ro twitter"><a href="https://twitter.com/" class = "ad"><i class="fa fa-twitter-square"></i></a></div>
+            <div class="ro camera"><a href="https://www.instagram.com/"><i class="fa fa-instagram"></i></a></div>
+            <div class="ro github"><a href="https://github.com/akulbaeva/cs-203"><i class="fa fa-github"></i></a></div>
+        </div>
+    </footer>
 </div>
 </body>
 <script src="../js/index.js"></script>
