--- a/index/hufflepuff.html
+++ b/index/hufflepuff.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="../style/hufflepuff.css">
     <link rel="stylesheet" href="../style/beginner.css">
 
+    <link rel="icon" type="image/jpg" href="../cs-203/icon.jpg">
+
+
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
@@ -217,7 +220,7 @@
             </div>
         </div>
     </main>
-    <footer>
+    <footer class="d-none d-sm-block s-md-block d-lg-block">
         <div class="icons">
             <div class="ro twitter"><a href="https://twitter.com/" class = "ad"><i class="fa fa-twitter-square"></i></a></div>
             <div class="ro camera"><a href="https://www.instagram.com/"><i class="fa fa-instagram"></i></a></div>
