--- a/index/review.html
+++ b/index/review.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="../style/review.css">
     <link rel="stylesheet" href="../style/beginner.css">
 
+    <link rel="icon" type="image/jpg" href="../cs-203/icon.jpg">
+
     <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans+SC|MedievalSharp&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.1/css/bootstrap.css">
@@ -107,7 +109,7 @@
             </form>
         </div>
     </main>
-    <footer>
+    <footer class="d-none d-sm-block s-md-block d-lg-block">
         <div class="icons">
             <div class="ro twitter"><a href="https://twitter.com/" class = "ad"><i class="fa fa-twitter-square"></i></a></div>
             <div class="ro camera"><a href="https://www.instagram.com/"><i class="fa fa-instagram"></i></a></div>
