--- a/index/slytherin.html
+++ b/index/slytherin.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="../style/slytherin.css">
     <link rel="stylesheet" href="../style/beginner.css">
 
+    <link rel="icon" type="image/jpg" href="../cs-203/icon.jpg">
+
+
 
     <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans+SC|MedievalSharp&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css">
@@ -223,7 +226,7 @@
             </div>
         </div>
     </main>
-    <footer>
+    <footer class="d-none d-sm-block s-md-block d-lg-block">
         <div class="icons">
             <div class="ro twitter"><a href="https://twitter.com/" class = "ad"><i class="fa fa-twitter-square"></i></a></div>
             <div class="ro camera"><a href="https://www.instagram.com/"><i class="fa fa-instagram"></i></a></div>
