--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.1/css/bootstrap.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link rel="stylesheet" href="http://stackpath.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.min.css">
-
 </head>
 <body>
 <div class="page-wrapper chiller-theme toggled">
@@ -96,7 +95,7 @@
     </main>
     <footer class="d-none d-sm-block s-md-block d-lg-block">
         <div class="icons">
-            <div class="ro twitter"><a href="https://twitter.com/" class = "ad"><i class="fa fa-twitter-square"></i></a></div>
+            <div class="ro twitter"><a href="https://twitter.com/" class = "ad"><i class="fa fa-twitter"></i></a></div>
             <div class="ro camera"><a href="https://www.instagram.com/"><i class="fa fa-instagram"></i></a></div>
             <div class="ro github"><a href="https://github.com/akulbaeva/cs-203"><i class="fa fa-github"></i></a></div>
         </div>
