--- a/index/hufflepuff.html
+++ b/index/hufflepuff.html
@@ -147,7 +147,7 @@
                 </div>
             </div>
 
-            <table class="cquote" style="margin:auto; color: #ffffff;">
+            <table class="cquote" style="margin:auto; color: #000000;">
                 <tbody>
                 <tr>
                     <td style="vertical-align: top; width:20px; font-size:36px; font-family:'Times New Roman', serif; font-weight:bold; text-align:left; padding:3px;"> “
@@ -161,7 +161,7 @@
                     <td style="vertical-align: bottom; width:20px; font-size:36px; font-family:'Times New Roman', serif; font-weight:bold; text-align:right; padding:3px;"> ”
                     </td></tr>
                 <tr>
-                    <td colspan="3" style="padding-top:10px; color: #ffffff">
+                    <td colspan="3" style="padding-top:10px; color: #000000">
                         <p style="font-size:smaller; text-align:right;">
                             <cite style="font-style:normal;">
                                 – The Sorting Hat, Harry Potter and the Philosopher's Stone</cite></p>
@@ -170,7 +170,7 @@
                 </tbody>
             </table>
 
-            <p style="color: #ffffff; margin-top: 50px; margin-left: 25px; margin-right: 25px">
+            <p style="color: #000000; margin-top: 50px; margin-left: 25px; margin-right: 25px">
                 <b>Hufflepuff</b>
                 House is one of the four Houses of Hogwarts School of Witchcraft and Wizardry and was founded by Helga Hufflepuff.
                 Hufflepuffs are known for being trustworthy, loyal and hardworking.
