--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="icon" type="image/jpg" href="../cs-203/icon.jpg">
 
     <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans+SC|MedievalSharp&display=swap" rel="stylesheet">
-<!--    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css">-->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.1/css/bootstrap.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <!--    <link rel="stylesheet" href="http://stackpath.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.min.css">-->
