--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
     <link rel="icon" type="image/jpg" href="../cs-203/icon.jpg">
 
     <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans+SC|MedievalSharp&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css">
+<!--    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css">-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.1/css/bootstrap.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 <!--    <link rel="stylesheet" href="http://stackpath.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.min.css">-->
-    <link rel="stylesheet" href="font-awesome.min.css">
+<!--    <link rel="stylesheet" href="font-awesome.min.css">-->
 </head>
 <body>
 <div class="page-wrapper chiller-theme toggled">
@@ -55,7 +56,7 @@
                     </li>
                     <li>
                         <a href="index/ravenclaw.html">
-                            <i class="far fa-plus"></i>
+                            <i class="fa fa-star"></i>
                             <span>Ravenclaw</span>
                         </a>
                     </li>
@@ -67,7 +68,7 @@
                     </li>
                     <li>
                         <a href="index/review.html">
-                            <i class="fa fa-box"></i>
+                            <i class="fa fa-crosshairs"></i>
                             <span>Feedback</span>
                         </a>
                     </li>
