--- a/index/ravenclaw.html
+++ b/index/ravenclaw.html
@@ -5,27 +5,25 @@
     <title>Ravenclaw</title>
     <link rel="stylesheet" href="../style/ravenclaw.css">
     <link rel="stylesheet" href="../style/beginner.css">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/jpg" href="../cs-203/icon.jpg">
 
-
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="http://stackpath.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.min.css">
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
 </head>
 <body>
 <div class="page-wrapper chiller-theme toggled">
     <a id="show-sidebar" class="btn btn-sm btn-dark" href="#">
-        <i class="fas fa-bars"></i>
+        <i class="fa fa-bars"></i>
     </a>
     <nav id="sidebar" class="sidebar-wrapper">
         <div class="sidebar-content">
             <div class="sidebar-brand">
                 <a >Harry Potter</a>
                 <div id="close-sidebar">
-                    <i class="fas fa-times"></i>
+                    <i class="fa fa-times"></i>
                 </div>
             </div>
             <div class="sidebar-menu">
@@ -53,7 +51,7 @@
                     </li>
                     <li>
                         <a href="ravenclaw.html">
-                            <i class="far fa-plus"></i>
+                            <i class="fa fa-star"></i>
                             <span>Ravenclaw</span>
                         </a>
                     </li>
@@ -65,7 +63,7 @@
                     </li>
                     <li>
                         <a href="review.html">
-                            <i class="fa fa-box"></i>
+                            <i class="fa fa-crosshairs"></i>
                             <span>Feedback</span>
                         </a>
                     </li>
@@ -83,7 +81,7 @@
 
         <div id = "WikiaArticle" class="WikiaArticle">
             <div id="House_infobox" class="infobox hidable" style="font-size: 85%;padding: 0px;">
-                <table class="infoboxtable hidable-content" cellspacing="0" cellpadding="4" style="border-width: 0px">
+                <table class="infoboxtable hidable-content"  style="border-width: 0px">
 
                     <tbody><tr>
                         <td class="infoboximage" colspan="2" style="text-align: center; background: #6596BF"> <a href="https://vignette.wikia.nocookie.net/pottermore/images/4/4f/Ravenclaw_crest.png/revision/latest?cb=20111112232334" class="image image-thumbnail"><img src="https://vignette.wikia.nocookie.net/pottermore/images/4/4f/Ravenclaw_crest.png/revision/latest/scale-to-width-down/180?cb=20111112232334" alt="Ravenclaw crest" class="" data-image-key="Ravenclaw_crest.png" data-image-name="Ravenclaw crest.png" width="180" height="186"></a>
@@ -222,6 +220,6 @@
         </div>
     </footer>
 </div>
-</body>
 <script src="../js/index.js"></script>
+</body>
 </html>
