--- a/index/review.html
+++ b/index/review.html
@@ -10,25 +10,24 @@
 
     <link rel="icon" type="image/jpg" href="../cs-203/icon.jpg">
 
-    <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans+SC|MedievalSharp&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.1/css/bootstrap.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="http://stackpath.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.min.css">
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+
 
 </head>
 <body>
 <div class="page-wrapper chiller-theme toggled">
     <a id="show-sidebar" class="btn btn-sm btn-dark" href="#">
-        <i class="fas fa-bars"></i>
+        <i class="fa fa-bars"></i>
     </a>
     <nav id="sidebar" class="sidebar-wrapper">
         <div class="sidebar-content">
             <div class="sidebar-brand">
                 <a >Harry Potter</a>
                 <div id="close-sidebar">
-                    <i class="fas fa-times"></i>
+                    <i class="fa fa-times"></i>
                 </div>
             </div>
             <div class="sidebar-menu">
@@ -56,7 +55,7 @@
                     </li>
                     <li>
                         <a href="ravenclaw.html">
-                            <i class="far fa-plus"></i>
+                            <i class="far fa-star"></i>
                             <span>Ravenclaw</span>
                         </a>
                     </li>
@@ -68,7 +67,7 @@
                     </li>
                     <li>
                         <a href="review.html">
-                            <i class="fa fa-box"></i>
+                            <i class="fa fa-crosshairs"></i>
                             <span>Feedback</span>
                         </a>
                     </li>
@@ -79,7 +78,7 @@
     <main class="page-content">
         <div class="form-box">
             <h1 style="margin-bottom: 50px">Feedback Form</h1>
-            <form action="mailto: aiymbubu.kulbaeva@iaau.edu.kg" method="post" enctype="text/plain" class="forms-conn">
+            <form action="mailto:aiymbubu.kulbaeva@iaau.edu.kg" method="post" enctype="text/plain" class="forms-conn">
                 <div class="form-group" >
                     <label for="name"  class="name-form-at"  >Name</label>
                     <input type="text" class="form-control" id="name"  name="Name" placeholder="Name">
@@ -117,7 +116,7 @@
         </div>
     </footer>
 </div>
-</body>
 <script src="../js/index.js"></script>
+</body>
 </html>
 
