--- a/index/slytherin.html
+++ b/index/slytherin.html
@@ -12,25 +12,24 @@
 
 
 
-    <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans+SC|MedievalSharp&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.1/css/bootstrap.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="http://stackpath.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.min.css">
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+
 
 </head>
 <body>
 
 <div class="page-wrapper chiller-theme toggled">
     <a id="show-sidebar" class="btn btn-sm btn-dark" href="#">
-        <i class="fas fa-bars"></i>
+        <i class="fa fa-bars"></i>
     </a>
     <nav id="sidebar" class="sidebar-wrapper">
         <div class="sidebar-content">
             <div class="sidebar-brand">
                 <a >Harry Potter</a>
                 <div id="close-sidebar">
-                    <i class="fas fa-times"></i>
+                    <i class="fa fa-times"></i>
                 </div>
             </div>
             <div class="sidebar-menu">
@@ -58,19 +57,19 @@
                     </li>
                     <li>
                         <a href="ravenclaw.html">
-                            <i class="far fa-plus"></i>
+                            <i class="fa fa-star"></i>
                             <span>Ravenclaw</span>
                         </a>
                     </li>
                     <li>
                         <a href="hufflepuff.html">
-                            <i class="fa fa-asterisk"></i>
+                            <i class="fa fa-crosshairs"></i>
                             <span>Hufflepuff</span>
                         </a>
                     </li>
                     <li>
                         <a href="review.html">
-                            <i class="fa fa-box"></i>
+                            <i class="fa fa-asterisk"></i>
                             <span>Feedback</span>
                         </a>
                     </li>
@@ -85,7 +84,7 @@
         <hr class="page-header__separator">
         <div id = "WikiaArticle" class="WikiaArticle">
             <div id="House_infobox" class="infobox hidable" style="font-size: 85%;padding: 0px;">
-                <table class="infoboxtable hidable-content" cellspacing="0" cellpadding="4" style="border-width: 0px">
+                <table class="infoboxtable hidable-content"  style="border-width: 0px">
                     <tbody>
                     <tr>
                         <td class="infoboximage" colspan="2" style="text-align: center; background: #245c20"> <a href="https://vignette.wikia.nocookie.net/pottermore/images/4/45/Slytherin_Crest.png/revision/latest?cb=20111112232353" class="image image-thumbnail"><img src="https://vignette.wikia.nocookie.net/pottermore/images/4/45/Slytherin_Crest.png/revision/latest/scale-to-width-down/180?cb=20111112232353" alt="Slytherin Crest" class="lzyPlcHld lzyTrns lzyLoaded" data-image-key="Slytherin_Crest.png" data-image-name="Slytherin Crest.png" data-src="https://vignette.wikia.nocookie.net/pottermore/images/4/45/Slytherin_Crest.png/revision/latest/scale-to-width-down/180?cb=20111112232353" width="180" height="209" onload="if(typeof ImgLzy==='object'){ImgLzy.load(this)}"><noscript><img src="https://vignette.wikia.nocookie.net/pottermore/images/4/45/Slytherin_Crest.png/revision/latest/scale-to-width-down/180?cb=20111112232353" 	 alt="Slytherin Crest"  	class="" 	 	data-image-key="Slytherin_Crest.png" 	data-image-name="Slytherin Crest.png" 	 	 width="180"  	 height="209"  	 	 	 	></noscript></a>
@@ -127,7 +126,7 @@
                         <td class="infoboxcell" style=";">
                             <p>
                                 <a title="Horace Slughorn">Horace Slughorn</a><br>
-                                <a itle="Professor Snape">Severus Snape</a>
+                                <a title="Professor Snape">Severus Snape</a>
                             </p>
                         </td>
                     </tr>
@@ -234,6 +233,6 @@
         </div>
     </footer>
 </div>
-</body>
 <script src="../js/index.js"></script>
+</body>
 </html>
