--- a/index.html
+++ b/index.html
@@ -4,31 +4,29 @@
     <meta charset="UTF-8">
     <title>Harry Potter</title>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/classes.css">
     <link rel="stylesheet" href="style/beginner.css">
 
     <link rel="icon" type="image/jpg" href="../cs-203/icon.jpg">
 
-    <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans+SC|MedievalSharp&display=swap" rel="stylesheet">
-<!--    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css">-->
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.1/css/bootstrap.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-<!--    <link rel="stylesheet" href="http://stackpath.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.min.css">-->
-<!--    <link rel="stylesheet" href="font-awesome.min.css">-->
+
 </head>
 <body>
 <div class="page-wrapper chiller-theme toggled">
     <a id="show-sidebar" class="btn btn-sm btn-dark" href="#">
-        <i class="fas fa-bars"></i>
+        <i class="fa fa-bars"></i>
     </a>
     <nav id="sidebar" class="sidebar-wrapper">
         <div class="sidebar-content">
             <div class="sidebar-brand">
                 <a >Harry Potter</a>
                 <div id="close-sidebar">
-                    <i class="fas fa-times"></i>
+                    <i class="fa fa-times"></i>
                 </div>
             </div>
             <div class="sidebar-menu">
@@ -80,17 +78,17 @@
         <div class = "HP" > Harry Potter</div>
         <div class = "body">
             <div class="txt">
-                The Harry Potter logo first used for the American edition of the novel series (and some other editions worldwide), and then the film series. <br></br>
-                The Philosopher's Stone (1997)<br></br>
-                The Chamber of Secrets (1998)<br></br>
-                The Prisoner of Azkaban (1999)<br></br>
-                The Goblet of Fire (2000)<br></br>
-                The Order of the Phoenix (2003)<br></br>
-                The Half-Blood Prince (2005)<br></br>
-                The Deathly Hallows (2007)<br></br>
-                Author	J. K. Rowling<br></br>
+                The Harry Potter logo first used for the American edition of the novel series (and some other editions worldwide), and then the film series. <br>
+                The Philosopher's Stone (1997)<br>
+                The Chamber of Secrets (1998)<br>
+                The Prisoner of Azkaban (1999)<br>
+                The Goblet of Fire (2000)<br>
+                The Order of the Phoenix (2003)<br>
+                The Half-Blood Prince (2005)<br>
+                The Deathly Hallows (2007)<br>
+                Author	J. K. Rowling<br>
                 Harry Potter is a series of fantasy novels written by British author J. K. Rowling. The novels chronicle the lives of a young wizard, Harry Potter, and his friends Hermione Granger and Ron Weasley, all of whom are students at Hogwarts School of Witchcraft and Wizardry. The main story arc concerns Harry's struggle against Lord Voldemort, a dark wizard who intends to become immortal, overthrow the wizard governing body known as the Ministry of Magic and subjugate all wizards and Muggles (non-magical people).
-                <br></br>
+                <br>
                 Since the release of the first novel, Harry Potter and the Philosopher's Stone, on 26 June 1997, the books have found immense popularity, critical acclaim and commercial success worldwide. They have attracted a wide adult audience as well as younger readers and are often considered cornerstones of modern young adult literature.[2] As of February 2018, the books have sold more than 500 million copies worldwide, making them the best-selling book series in history, and have been translated into eighty languages.[3] The last four books consecutively set records as the fastest-selling books in history, with the final instalment selling roughly eleven million copies in the United States within twenty-four hours of its release
             </div>
         </div>
@@ -103,7 +101,7 @@
         </div>
     </footer>
 </div>
-</body>
 <script src="js/index.js"></script>
+</body>
 </html>
 
