--- a/index/gryffindor.html
+++ b/index/gryffindor.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gryffindor</title>
     <link rel="stylesheet" href="../style/gryffindor.css">
     <link rel="stylesheet" href="../style/beginner.css">
@@ -11,21 +12,20 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="http://stackpath.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.min.css">
-
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
 </head>
 <body>
 <div class="page-wrapper chiller-theme toggled">
     <a id="show-sidebar" class="btn btn-sm btn-dark" href="#">
-        <i class="fas fa-bars"></i>
+        <i class="fa fa-bars"></i>
     </a>
     <nav id="sidebar" class="sidebar-wrapper">
         <div class="sidebar-content">
             <div class="sidebar-brand">
                 <a >Harry Potter</a>
                 <div id="close-sidebar">
-                    <i class="fas fa-times"></i>
+                    <i class="fa fa-times"></i>
                 </div>
             </div>
             <div class="sidebar-menu">
@@ -53,19 +53,19 @@
                     </li>
                     <li>
                         <a href="ravenclaw.html">
-                            <i class="far fa-plus"></i>
+                            <i class="fa fa-star"></i>
                             <span>Ravenclaw</span>
                         </a>
                     </li>
                     <li>
                         <a href="hufflepuff.html">
-                            <i class="fa fa-asterisk"></i>
+                            <i class="fa fa-star"></i>
                             <span>Hufflepuff</span>
                         </a>
                     </li>
                     <li>
                         <a href="review.html">
-                            <i class="fa fa-box"></i>
+                            <i class="fa fa-crosshairs"></i>
                             <span>Feedback</span>
                         </a>
                     </li>
@@ -83,7 +83,7 @@
 
         <div id = "WikiaArticle" class="WikiaArticle">
             <div id="House_infobox" class="infobox hidable" style="font-size: 85%;padding: 0px;">
-                <table class="infoboxtable hidable-content" cellspacing="0" cellpadding="4" style="border-width: 0px">
+                <table class="infoboxtable hidable-content"  style="border-width: 0px">
 
                     <tbody><tr>
                         <td class="infoboximage" colspan="2" style="text-align: center; background: #6b0d0d"> <a href="https://vignette.wikia.nocookie.net/pottermore/images/1/16/Gryffindor_crest.png/revision/latest?cb=20111112232412" class="image image-thumbnail"><img src="https://vignette.wikia.nocookie.net/pottermore/images/1/16/Gryffindor_crest.png/revision/latest/scale-to-width-down/180?cb=20111112232412" alt="Gryffindor crest" class="lzyPlcHld lzyTrns lzyLoaded" data-image-key="Gryffindor_crest.png" data-image-name="Gryffindor crest.png" data-src="https://vignette.wikia.nocookie.net/pottermore/images/1/16/Gryffindor_crest.png/revision/latest/scale-to-width-down/180?cb=20111112232412" width="180" height="197" onload="if(typeof ImgLzy==='object'){ImgLzy.load(this)}"><noscript><img src="https://vignette.wikia.nocookie.net/pottermore/images/1/16/Gryffindor_crest.png/revision/latest/scale-to-width-down/180?cb=20111112232412" 	 alt="Gryffindor crest"  	class="" 	 	data-image-key="Gryffindor_crest.png" 	data-image-name="Gryffindor crest.png" 	 	 width="180"  	 height="197"  	 	 	 	></noscript></a>
@@ -223,6 +223,6 @@
         </div>
     </footer>
 </div>
-</body>
 <script src="../js/index.js"></script>
+</body>
 </html>
