--- a/index/hufflepuff.html
+++ b/index/hufflepuff.html
@@ -6,26 +6,26 @@
     <link rel="stylesheet" href="../style/hufflepuff.css">
     <link rel="stylesheet" href="../style/beginner.css">
 
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/jpg" href="../cs-203/icon.jpg">
 
 
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="http://stackpath.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.min.css">
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
 </head>
 <body>
 <div class="page-wrapper chiller-theme toggled">
     <a id="show-sidebar" class="btn btn-sm btn-dark" href="#">
-        <i class="fas fa-bars"></i>
+        <i class="fa fa-bars"></i>
     </a>
     <nav id="sidebar" class="sidebar-wrapper">
         <div class="sidebar-content">
             <div class="sidebar-brand">
                 <a >Harry Potter</a>
                 <div id="close-sidebar">
-                    <i class="fas fa-times"></i>
+                    <i class="fa fa-times"></i>
                 </div>
             </div>
             <div class="sidebar-menu">
@@ -53,7 +53,7 @@
                     </li>
                     <li>
                         <a href="ravenclaw.html">
-                            <i class="far fa-plus"></i>
+                            <i class="fa fa-star"></i>
                             <span>Ravenclaw</span>
                         </a>
                     </li>
@@ -65,7 +65,7 @@
                     </li>
                     <li>
                         <a href="review.html">
-                            <i class="fa fa-box"></i>
+                            <i class="fa fa-crosshairs"></i>
                             <span>Feedback</span>
                         </a>
                     </li>
@@ -82,7 +82,7 @@
         </div>
         <div id = "WikiaArticle" class="WikiaArticle">
             <div id="House_infobox" class="infobox hidable" style="font-size: 85%;padding: 0px;">
-                <table class="infoboxtable hidable-content" cellspacing="0" cellpadding="4" style="border-width: 0px">
+                <table class="infoboxtable hidable-content"  style="border-width: 0px">
 
                     <tbody><tr>
                         <td class="infoboximage" colspan="2" style="text-align: center; background: #AC8751">
@@ -228,6 +228,6 @@
         </div>
     </footer>
 </div>
-</body>
 <script src="../js/index.js"></script>
+</body>
 </html>
