--- a/index/review.html
+++ b/index/review.html
@@ -55,7 +55,7 @@
                     </li>
                     <li>
                         <a href="ravenclaw.html">
-                            <i class="far fa-star"></i>
+                            <i class="fa fa-star"></i>
                             <span>Ravenclaw</span>
                         </a>
                     </li>
